<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/TitleText"
        android:id="@+id/first_view_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/mvvm_first_view_with_navigation_title"/>

    <Button
        android:id="@+id/nav_with_shuttle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/margin_buttons_small"
        android:layout_marginTop="@dimen/margin_buttons_small"
        android:layout_marginEnd="@dimen/margin_buttons_small"
        android:enabled="false"
        android:text="@string/navigate_using_shuttle"
        android:visibility="visible" />

    <TextView
        android:id="@+id/nav_with_shuttle_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_buttons_small"
        android:gravity="center"
        android:text="@string/the_app_will_not_crash_using_shuttle"
        android:textColor="@android:color/holo_green_dark" />

    <Button
        android:id="@+id/nav_normally_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/margin_buttons_small"
        android:layout_marginTop="@dimen/margin_buttons_large"
        android:layout_marginEnd="@dimen/margin_buttons_small"
        android:enabled="false"
        android:text="@string/navigate_normally"
        android:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_buttons_small"
        android:gravity="center"
        android:text="@string/the_app_will_crash_without_using_shuttle"
        android:textColor="@android:color/holo_red_dark" />
</LinearLayout>